fixed issue with playlist section overflowing

--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,7 @@ body {
   border-radius: 8px;
   display: flex;
   flex-direction: column;
+  overflow: hidden;
 }
 
 .sidebar .top-menu {
@@ -127,14 +128,13 @@ body {
 .sidebar .add-expand-row button:hover {
   color: white;
   background: rgba(167, 167, 167, 0.1);
-  border-radius: 50px;
+  border-radius: 50%;
   transition: 0.5s;
 }
 
 .sidebar .library-categories {
   display: flex;
   overflow: auto;
-  /* padding: 0 10px; */
   margin: 0 10px;
 }
 
@@ -155,30 +155,39 @@ body {
 
 .sidebar .library-list {
   width: 100%;
-  /* height: 100%; */
   background: none;
-  display: flex;
-  flex-direction: row;
   overflow: visible;
   overflow-y: auto;
 }
 
-.sidebar.library-list.searcbox {
-  width: 100%;
-  background: none;
+.sidebar .library-list .searcbox {
   display: flex;
   justify-content: space-between;
-  margin: 10px 22px;
+  background: none;
+  align-items: center;
+  padding: 0;
+  margin: 0;
 }
 
-.sidebar.library-list.searcbox .recent-container {
+.sidebar .library-list .searcbox > div {
   display: flex;
   align-items: center;
-  font-size: 0.8rem;
+  cursor: pointer;
+  margin: 15px 22px;
 }
 
-.sidebar.library-list.searcbox .recent-container i {
-  margin-left: 8px;
+.sidebar .library-list .searcbox > div i:hover {
+  color: white;
+  background: rgba(167, 167, 167, 0.1);
+  border-radius: 50%;
+  transition: 0.5s;
+}
+
+.sidebar .library-list .playlists {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  background: none;
 }
 
 /* main content */
